  * assistant: Run transferkeys as batch jobs.
  * Automatically fix up bad bare repositories created by
    versions 5.20131118 through 5.20131127.
  * rsync special remote: Fix fallback mode for rsync remotes that
    use hashDirMixed. Closes: #731142
  * copy --from, get --from: When --force is used, ignore the
    location log and always try to get the file from the remote.

 -- Joey Hess <joeyh@debian.org>  Sun, 01 Dec 2013 13:57:58 -0400

git-annex (5.20131130) unstable; urgency=low

  * init: Fix a bug that caused git annex init, when run in a bare
    repository, to set core.bare=false.

 -- Joey Hess <joeyh@debian.org>  Sat, 30 Nov 2013 16:32:35 -0400

git-annex (5.20131127.1) unstable; urgency=low

  * Rebuild that does not try to use quvi 0.9 from experimental.

 -- Joey Hess <joeyh@debian.org>  Thu, 28 Nov 2013 07:57:36 -0400

git-annex (5.20131127) unstable; urgency=low

  * webapp: Detect when upgrades are available, and upgrade if the user
    desires.
    (Only when git-annex is installed using the prebuilt binaries
    from git-annex upstream, not from eg Debian.)
  * assistant: Detect when the git-annex binary is modified or replaced,
    and either prompt the user to restart the program, or automatically
    restart it.
  * annex.autoupgrade configures both the above upgrade behaviors.
  * Added support for quvi 0.9. Slightly suboptimal due to limitations in its
    interface compared with the old version.
  * Bug fix: annex.version did not get set on automatic upgrade to v5 direct
    mode repo, so the upgrade was performed repeatedly, slowing commands down.
  * webapp: Fix bug that broke switching between local repositories
    that use the new guarded direct mode.
  * Android: Fix stripping of the git-annex binary.
  * Android: Make terminal app show git-annex version number.
  * Android: Re-enable XMPP support.
  * reinject: Allow to be used in direct mode.
  * Futher improvements to git repo repair. Has now been tested in tens